dist/1.0/bin/sample/retrieveUnpackaged/objects/Grant__c.object
<CustomObject>
    <description>UKE Grants</description>
    <fields>
        <fullName>Abbr__c</fullName>
        <label>Abbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Energis</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_ID__c</fullName>
        <displayFormat>G{00000}</displayFormat>
        <label>Grant ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_Currency__c</fullName>
        <label>One Off Fee Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_Pln__c</fullName>
        <defaultValue>22</defaultValue>
        <label>One Off Fee PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee__c</fullName>
        <defaultValue>22</defaultValue>
        <label>One Off Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Contract__c</fullName>
        <label>Vendor (Contract)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor (Invoice)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Grants (Vendor (Invoice))</relationshipLabel>
        <relationshipName>Grants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Grant_ID__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Company_Name__c</columns>
        <columns>Abbr__c</columns>
        <columns>Send_Date__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <columns>One_Off_Fee__c</columns>
        <columns>One_Off_Fee_Currency__c</columns>
        <columns>One_Off_Fee_Pln__c</columns>
        <columns>Vendor_Contract__c</columns>
        <columns>Vendor_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>GTS-LR-002/06</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All01</fullName>
        <columns>NAME</columns>
        <columns>One_Off_Fee__c</columns>
        <columns>One_Off_Fee_Pln__c</columns>
        <columns>One_Off_Fee_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All01</label>
    </listViews>
    <nameField>
        <label>Application ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>